Raw data for exploratory analysis

--- a/bed-from-vcf.ipynb
+++ b/bed-from-vcf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "64fdc593",
    "metadata": {},
    "outputs": [],
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "464dd0c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_info(line_array, infoIndex):\n",
     "    \n",
-    "    dict_values={'SVTYPE':'NN', 'END':-1, 'CHR2':'', 'SVLEN':0}\n",
+    "    dict_values={'SVTYPE':'NN', 'END':-1, 'CHR2':'', 'SVLEN':0, 'SUPP_VEC':0}\n",
     "    \n",
     "    if(len(line_array)<=infoIndex):\n",
     "        return dict_values\n",
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "36bc9935",
    "metadata": {},
    "outputs": [],
    "source": [
     "def bed_from_vcf(strain_name, input_file, final_dir, custom_mappings={}, min_len=-1, unified_file=False,\n",
-    "                 split_precise=False, fix_coordinates=True, exclude_bnd=True, exlude_noend=True):\n",
+    "                 split_precise=False, fix_coordinates=True, exclude_bnd=True, exlude_noend=True, sup_filter=-1):\n",
     "\n",
     "    \"\"\"\n",
     "    bed_from_vcf(strain_name, input_file, final_dir, custom_mappings, unified_file, split_precise, \n",
@@ -136,8 +136,12 @@
     "\n",
     "            end=int(info['END'])-1\n",
     "            length=abs(int(info['SVLEN']))\n",
+    "            sup_vec=info['SUPP_VEC']\n",
     "            \n",
-    "            if min_len > 0 and length < min_len :\n",
+    "            if min_len > 0 and length < min_len:\n",
+    "                continue\n",
+    "                \n",
+    "            if sup_filter > 0 and sup_vec.count(\"1\") != sup_filter:\n",
     "                continue\n",
     "\n",
     "            sv_type = info['SVTYPE'].replace(\"/\",\"\").upper()\n",
@@ -183,17 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "a767af79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DUP', 'INV', 'INS', 'DEL']"
+       "['INS', 'DEL', 'INV', 'DUP']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +218,8 @@
     "# sv_file_path = '/home/egarcia/workspace/data/DBA2J/calls/survivor/merged.vcf'\n",
     "# final_dir = '../../data/DBA2J/bed/'+out+'/merged/'\n",
     "\n",
-    "sv_file_path = '/home/egarcia/workspace/data/DBA2J/calls/survivor/merged_two.vcf'\n",
-    "final_dir = '../../data/DBA2J/bed/'+out+'/merged_two/'\n",
+    "sv_file_path = '/home/egarcia/workspace/data/DBA2J/calls/survivor/merged_one.vcf'\n",
+    "final_dir = '../../data/DBA2J/bed/'+out+'/merged_ss/'\n",
     "\n",
     "\n",
     "\n",
@@ -241,7 +245,9 @@
     "    \"TANDEMLOWDUP\": \"DUP\",\n",
     "}\n",
     "\n",
-    "bed_from_vcf(\"DBA2J\", sv_file_path, final_dir, custom_mappings, 20)"
+    "\n",
+    "bed_from_vcf(strain_name=\"DBA2J\", input_file=sv_file_path, final_dir=final_dir, \n",
+    "             custom_mappings=custom_mappings, min_len=20, sup_filter=1)"
    ]
   },
   {
@@ -293,6 +299,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94cb67dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e54fc4a",
    "metadata": {},
    "outputs": [],
    "source": []
